Done fully i think. Might need to iron out some small bugs